--- a/wuling_news.ipynb
+++ b/wuling_news.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +73,23 @@
     "html = download_page(\"http://www.wuling.com.cn/jtxw.aspx\")\n",
     "result = get_news_list(html)\n",
     "for news in result:\n",
-    "    print(\"{}({}) {}\".format(news[0],news[2],news[1]))"
+    "    print(\"{}({}) {}\".format(news[0],news[2],news[1]))\n",
+    "    content = download_page(news[1])\n",
+    "    path=r\"C:\\data\\news\\{}_{}.html\".format(news[0],news[2])\n",
+    "    with open(path, 'wb') as f:\n",
+    "        f.write(content.encode(\"utf-8\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "content = download_page(\"http://www.wuling.com.cn/jtxw_view.aspx?id=562\")\n",
+    "path=r\"C:\\data\\news\\{}_{}.html\".format(news[0],news[2])\n",
+    "with open(path, 'wb') as f:\n",
+    "    f.write(content.encode(\"utf-8\"))"
    ]
   },
   {
